--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,9 +29,14 @@
 		{% endblock %}
 	</head>
 	<body>
-		{% block body %}{% endblock %}
+		{% block body %}
+
+		{% endblock %}
 	</body>
     {% block javascripts %}
+	
+
+
 				<!-- Jquery, Popper, Bootstrap -->
 				<script src="{{ asset('js/vendor/modernizr-3.5.0.min.js') }}"></script>
 				<script src="{{ asset('js/vendor/jquery-1.12.4.min.js') }}"></script>
