--- a/templates/reclamation/addreclamation.html.twig
+++ b/templates/reclamation/addreclamation.html.twig
@@ -48,7 +48,12 @@
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">Nous Contacter</a></li>
-                                </ul>
+
+ </ul>
+
+
+
+                                
                             </nav>
                         </div>
                         <!-- Header Right -->
@@ -61,6 +66,61 @@
                                 </li>
                                 <li> <a href="login.html"><span class="flaticon-user"></span></a></li>
                                 <li><a href="cart.html"><span class="flaticon-shopping-cart"></span></a> </li>
+                                                               
+
+<li>
+
+
+
+    <div class="notification-icon" data-toggle="modal" data-target="#notificationModal">
+        <!-- Ici, ajoutez votre icône de notification -->
+        <span>🔔</span>
+    </div>
+    ...
+</div>
+
+<!-- Modal pour les notifications -->
+<div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="notificationModalLabel">Notifications</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Le contenu (tableau des réclamations) sera chargé ici -->
+
+{% if reclamationf is defined %}
+    {# Utilisation de reclamationf ici #}
+{% else %}
+    <p>La variable reclamationf n'est pas définie.</p>
+{% endif %}
+
+<div class="modal-body">
+<div class="modal-body">
+    {% for reclamation in reclamationf %}
+        {% if reclamation.Etat == 1 %}
+            <p> L'Admin a répondu à l'objet de Reclamation {{ reclamation.obj }}</p>
+        {% endif %}
+    {% else %}
+        <p>Aucune réclamation trouvée.</p>
+    {% endfor %}
+</div>
+
+</div>
+
+
+</div>
+
+
+    </div>
+    </div>
+  </div>
+
+
+</li>
                             </ul>
                         </div>
                     </div>
@@ -130,6 +190,9 @@
                                    </div>
                                    <div><!-- validate --></div>
                                 {{ form_end(formAdd) }}
+
+
+                                
                             </div>
                     </div>
                 </div>
