--- a/templates/reclamation/showreclamation.html.twig
+++ b/templates/reclamation/showreclamation.html.twig
@@ -97,6 +97,7 @@
     <!-- Content Header (Page header) -->
     <!-- Main content -->
     <section class="content">
+      <a href="{{ path('app_statistics') }}" class="btn btn-success mb-1 mt-1">Afficher Statistique</a>
 <form action="{{ path('app_reclamation_recherche') }}" method="get" class="mb-3">
     <div class="input-group">
         <input type="text" name="q" class="form-control" placeholder="Recherche par titre..." aria-label="Recherche" aria-describedby="button-addon2">
@@ -105,6 +106,7 @@
         </div>
     </div>
 </form>
+
 <!-- Default box -->
                 <div class="card bg-light">
                     <div class="card-header text-white bg-blue border-bottom-0">
