--- a/templates/produit/back.html.twig
+++ b/templates/produit/back.html.twig
@@ -172,8 +172,7 @@
         <td>{{ produit.type }}</td>
         <td>{{ produit.taille }}</td>
         <td>
-            <a style="color: green;" href="">Confirmer</a> |
-            <a style="color: red;" href="{{ path('app_produit_delete', {'id': produit.id}) }}">Refuser</a>
+            <a style="color: red;" href="{{ path('app_produit_delete', {'id': produit.id}) }}"><i class="fas fa-trash"></i> Supprimer</a>
         </td>
     </tr>
     {% endfor %}
