--- a/templates/auth/verif.html.twig
+++ b/templates/auth/verif.html.twig
@@ -78,29 +78,19 @@
         <section class="login_part section_padding ">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-md-6">
                         <div class="login_part_text text-center">
                             <div class="login_part_text_iner">
-                                <h2>Nouveau a WeTek ?</h2>
-                                <p>Merci d'avoir choisir WeTek Pour Continuer Vos achat inscrivez-vous et beneficier d'une experience innoubliable !</p>
-                                <a href="{{ path('app_user_singin') }}" class="btn_3">S'inscrire</a>
+                                <h2>Authentification a deux facteur</h2>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="login_part_form">
                             <div class="login_part_form_iner">
-                                <h3>Bienvenue !<br>
-                                    Veuillez vous connecter</h3>
-                                     {{ form_start(form, {'attr': {novalidate: 'novalidate','class': 'row contact_form'}}) }}
-                                    <div class="col-md-12 form-group p_star">
-                                    {{ form_widget(form.mail, {'attr': {'placeholder': 'Votre E-mail', 'class': 'form-control', 'id': 'mail', 'name':'mail' }}) }}
-                                    {{form_errors(form.mail)}}
-                                   </div>
-                                    <div class="col-md-12 form-group p_star">
-                                    {{ form_widget(form.mdp, {'attr': {'placeholder': 'Votre Mot De Passe', 'class': 'form-control', 'id': 'mdp', 'name':'mdp'}} ) }}
-                                   </div>
-                                   {% for flashType, flashMessages in app.flashes %}
+                                <h3>Veuiller rentret le code d'authentification a deux facteur</h3>
+                                    {{form(form)}}
+                                    {% for flashType, flashMessages in app.flashes %}
                                         {% for flashMessage in flashMessages %}
                                             <div class="alert alert-danger alert-dismissible fade show col-md-12" role="alert">
                                                 <strong class="d-flex justify-content-center">{{ flashMessage }}</strong>
@@ -110,14 +100,6 @@
                                             </div>
                                         {% endfor %}
                                     {% endfor %}
-                                   <div class="col-md-12 form-group p_star">
-                                    {{ form_widget(form.submit, {'attr': {'class': 'btn_3 text-center'} }) }}
-                                   </div>
-                                    <a href="{{path('app_user_forgot')}}" style="color:blue;" class="d-flex justify-content-end mb-4">Mot de passe oubiliée</a>
-                                    {{ form_end(form) }} 
-
-                                    
-                                   
                             </div>
                         </div>
                     </div>
