--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -157,11 +157,15 @@
 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
 <h6 class="mt-3 mb-5 text-primary">Action</h6>
 </div>
+<div class="mb-3 d-flex justify-content-between">
+<a href="{{ path('app_user_profil_edit', {'id': id }) }}" class="btn btn-success mr-2 ml-2">Modifier mon profil</a>
+{% if is_2f == false %}<a href="{{ path('app_user_auth_pair', {'id': id }) }}" class="btn btn-info">Activer l'Authentification à deux facteurs</a>
+{% else %}<a href="{{ path('app_user_auth_unpair', {'id': id }) }}" class="btn btn-info">Désactiver l'Authentification à deux facteurs</a>
+{% endif %}
 </div>
 <div class="mb-5 d-flex justify-content-between">
-<a href="{{ path('app_user_profil_edit', {'id': id }) }}" class="btn btn-success">Modifier mon profil</a>
-<a href="" class="btn btn-danger">Afficher List reclamation</a>
-<a href="" class="btn btn-warning">Afficher List Commande</a>
+<a href="" class="btn btn-danger mr-2 ml-2">Afficher List reclamation</a>
+<a href="" class="btn btn-warning mr-2">Afficher List Commande</a>
 <a href="" class="btn btn-warning">Afficher List Livraison</a>
 </div>
 <div class="row gutters">
